Game nearly complete. Fixed modal. Only need to fix logic on game ending due to too much time elapsed.

--- a/css/app.css
+++ b/css/app.css
@@ -87,7 +87,6 @@ h1 {
 
 .score-panel {
     text-align: left;
-    /* width: 345px; */
     width: 600px;
     margin-bottom: 10px;
 
@@ -103,7 +102,7 @@ h1 {
 .score-panel #timer{
     display: inline-block;
     font-size: 23px;
-    padding-right: .5em;
+    padding-right: 4em;
 }
 
 .score-panel .stars {
@@ -132,29 +131,25 @@ h1 {
     float: right;
 }
 
-#pause #continue {
+/* #pause {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 1em;
     display: inline-block;
-    /* float: right; */
-}
+} */
 
+/* Modal */
 .modal {
-    visibility: hidden;
-    /* display: inline; */
-    display: flex;
-    width: 660px;
-    height: 680px;
-    padding: 32px;
+    display: none;
+    position: absolute;
+    margin: 0 auto;
+    top: 110px;
+    left: 0;
+    right: 0;
+    width: 700px;
+    height: 700px;
     border-radius: 10px;
-    box-shadow: 12px 15px 20px 0;
-    align-items: center;
-    margin: 0 0 3em; 
-
-}
-
-.modal h1 {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 3em;
-    text-align: center;
+    z-index: 5;
+    background-color: rgba(0, 0, 0, .6);
+    color: white;
+    max-width: 80%;
 }
